fix: spacing issue on faq

--- a/src/app/sections/faq/faq.component.scss
+++ b/src/app/sections/faq/faq.component.scss
@@ -4,7 +4,7 @@
   position: relative;
   display: block;
   background-color: color('darker');
-  margin-top: $layout--lg;
+  //margin-top: $layout--lg;
 }
 
 .c-faq {
